Melhorias e continuação da adição de usuários.

--- a/templates/connect.html
+++ b/templates/connect.html
@@ -25,8 +25,8 @@
             </div>
     
             <div class="send-data-area mt-5">
-                <button class="btn btn-success">Submit</button>
-                <button class="btn btn-danger">Cancel</button>
+                <button class="btn btn-success" type="submit">Enviar</button>
+                <button class="btn btn-danger" type="reset">Limpar campos</button>
             </div>
         </form>
     </div>
