Melhorias e começo da página de usuário e cadastro.

--- a/templates/connect.html
+++ b/templates/connect.html
@@ -1,6 +1,6 @@
 {% extends "/base.html" %}
 
-{% block title %} Connect {% endblock %}
+{% block title %} Conectar {% endblock %}
 
 {% block styles %}
     <link rel="stylesheet" href="/static/css/connect.css">
