Começo da página de usuário.

--- a/templates/userArea.html
+++ b/templates/userArea.html
@@ -7,7 +7,42 @@
 {% endblock %}
 
 {% block content %}
-    <h1>Hi! {{ nome }}</h1>
+    <header>
+        <div class="header row d-flex align-items-center">
+            <div class="logo col">
+                <!-- Logo -->
+                <img src="/static/img/2maletaMedicaIOT-150x150-removebg-preview.png" alt="Logo">
+            </div>
+        </div>
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+        <div class="footer d-flex justify-content-center">
+            <div class="links-falsos row w-75">
+                <div class="col d-flex flex-column align-items-center p-0">
+                    <a href="#" class="link">Link falso</a>
+                    <a href="#" class="link">Link falso</a>
+                    <a href="#" class="link">Link falso</a>
+                </div>
+
+                <div class="col d-flex flex-column align-items-center p-0">
+                    <a href="#" class="link">Link falso</a>
+                    <a href="#" class="link">Link falso</a>
+                    <a href="#" class="link">Link falso</a>
+                </div>
+
+                <div class="col d-flex flex-column align-items-center p-0">
+                    <a href="#" class="link">Link falso</a>
+                    <a href="#" class="link">Link falso</a>
+                    <a href="#" class="link">Link falso</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 {% endblock %}
 
 {% block scripts %}
