--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" data-bs-theme="dark">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,7 @@
 
     {% block styles %}{% endblock %}
 </head>
-<body class="">
+<body style="background-color: rgb(205, 202, 189);">
     {% block content %}
         <!-- Template here -->
     {% endblock %}
