Função de login 'feita', e página da criação de remédios começada.

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
+<html lang="pt-br" data-bs-theme="dark">
+<head>  
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %} IOT - DOSADOR {% endblock %}</title>
@@ -13,7 +13,7 @@
 
     {% block styles %}{% endblock %}
 </head>
-<body style="background-color: rgb(205, 202, 189);">
+<body>
     {% block content %}
         <!-- Template here -->
     {% endblock %}
