Mais gambiarras pra dar tempo de finalizar

--- a/templates/userArea.html
+++ b/templates/userArea.html
@@ -30,8 +30,8 @@
     </header>
 
     <main>
-        {% if errro %}
-            <div class="error-area">
+        {% if error %}
+            <div class="error-area container">
                 <p class="alert alert-danger">{{ error }}</p>
             </div>
         {% endif %}
@@ -76,17 +76,17 @@
                                 </div>
 
                                 <div class="horario1 form-floating">
-                                    <input type="time" name="remedio1Hora1" class="form-control">
+                                    <input type="time" name="remedio1hora1" class="form-control">
                                     <label for="horario1">Primeiro horário:</label>
                                 </div>
 
                                 <div class="horario2 form-floating mt-3 mb-3">
-                                    <input type="time" name="remedio1Hora2" class="form-control">
+                                    <input type="time" name="remedio1hora2" class="form-control">
                                     <label for="horario2">Segundo horário:</label>
                                 </div>
 
                                 <div class="horario3 form-floating">
-                                    <input type="time" name="remedio1Hora3" class="form-control">
+                                    <input type="time" name="remedio1hora3" class="form-control">
                                     <label for="horario3">Terceiro horário:</label>
                                 </div>
                             </div>
@@ -106,22 +106,22 @@
                                 </div>
 
                                 <div class="nome-remedio form-floating mt-3 mb-3">
-                                    <input type="text" name="nome_remedio[1]" class="form-control">
+                                    <input type="text" name="nome_remedio2" class="form-control">
                                     <label for="nome-remedio">Nome do remédio</label>
                                 </div>
 
                                 <div class="horario1 form-floating">
-                                    <input type="time" name="remedio[1][]" class="form-control">
+                                    <input type="time" name="remedio2hora1" class="form-control">
                                     <label for="horario1">Primeiro horário:</label>
                                 </div>
 
                                 <div class="horario2 form-floating mt-3 mb-3">
-                                    <input type="time" name="remedio[1][]" class="form-control">
+                                    <input type="time" name="remedio2hora2" class="form-control">
                                     <label for="horario2">Segundo horário:</label>
                                 </div>
 
                                 <div class="horario3 form-floating">
-                                    <input type="time" name="remedio[1][]" class="form-control">
+                                    <input type="time" name="remedio2hora3" class="form-control">
                                     <label for="horario3">Terceiro horário:</label>
                                 </div>
                             </div>
@@ -141,22 +141,22 @@
                                 </div>
 
                                 <div class="nome-remedio form-floating mt-3 mb-3">
-                                    <input type="text" name="nome_remedio[2]" class="form-control">
+                                    <input type="text" name="nome_remedio3" class="form-control">
                                     <label for="nome-remedio">Nome do remédio</label>
                                 </div>
 
                                 <div class="horario1 form-floating">
-                                    <input type="time" name="remedio[2][]" class="form-control">
+                                    <input type="time" name="remedio3hora1" class="form-control">
                                     <label for="horario1">Primeiro horário:</label>
                                 </div>
 
                                 <div class="horario2 form-floating mt-3 mb-3">
-                                    <input type="time" name="remedio[2][]" class="form-control">
+                                    <input type="time" name="remedio3hora2" class="form-control">
                                     <label for="horario2">Segundo horário:</label>
                                 </div>
 
                                 <div class="horario3 form-floating">
-                                    <input type="time" name="remedio[2][]" class="form-control">
+                                    <input type="time" name="remedio3hora3" class="form-control">
                                     <label for="horario3">Terceiro horário:</label>
                                 </div>
                             </div>
@@ -176,22 +176,22 @@
                                 </div>
 
                                 <div class="nome-remedio form-floating mt-3 mb-3">
-                                    <input type="text" name="nome_remedio[3]" class="form-control">
+                                    <input type="text" name="nome_remedio4" class="form-control">
                                     <label for="nome-remedio">Nome do remédio</label>
                                 </div>
 
                                 <div class="horario1 form-floating">
-                                    <input type="time" name="remedio[3][]" class="form-control">
+                                    <input type="time" name="remedio4hora1" class="form-control">
                                     <label for="horario1">Primeiro horário:</label>
                                 </div>
 
                                 <div class="horario2 form-floating mt-3 mb-3">
-                                    <input type="time" name="remedio[3][]" class="form-control">
+                                    <input type="time" name="remedio4hora2" class="form-control">
                                     <label for="horario2">Segundo horário:</label>
                                 </div>
 
                                 <div class="horario3 form-floating">
-                                    <input type="time" name="remedio[3][]" class="form-control">
+                                    <input type="time" name="remedio4hora3" class="form-control">
                                     <label for="horario3">Terceiro horário:</label>
                                 </div>
                             </div>
