--- a/templates/userArea.html
+++ b/templates/userArea.html
@@ -25,7 +25,9 @@
                     <form action="/deleteRemedios" method="POST">
                         <li><button class="dropdown-item" type="submit">Deletar Remédios</button></li>
                     </form>
-                    <li><a class="dropdown-item" href="/deleteAccount">Deletar conta</a></li>
+                    <form action="/deleteAccount", method="POST">
+                        <li><button class="dropdown-item" type="submit">Deletar conta</button></li>
+                    </form>
                 </ul>
             </div>
         </div>
