--- a/templates/userArea.html
+++ b/templates/userArea.html
@@ -52,6 +52,12 @@
 
                 </div>
             </div>
+
+            <div class="sendData mt-5 container justify-content-center d-flex">
+                <form action="/mandarTudo" method="POST">
+                    <button type="submit" class="btn btn-success">Enviar Dados Para a Maleta</button>
+                </form>
+            </div>
         {% else %}
             <div class="main">
                 <!-- Mostrar opção para adicionar horários de remédios -->
